# omni

./: .gitignore  .omni.yaml  .rustfmt.toml  Cargo.toml  Gemfile  README.md  build.rs  install.sh  omni  omni.bash  omni.rb
.github/: dependabot.yml  labeler.yaml
.github/workflows/: auto-pr-cargo-dependencies.yaml  auto-pr-cargo-fixes.yaml  auto-pr-yarn-dependencies.yaml  build-and-test-target.yaml  build.yaml  cargo-dependencies.yaml  pull-requests-labeler.yaml  release.yaml  rust-clippy.yaml  semgrep.yaml  tests.yaml  website.yaml  yarn-dependencies.yaml
.github/workflows/auto-pr/: yarn-dependencies.yaml
cmd/: cd  cd.rb  clone  clone.rb  down.rb  help  help.rb  organize.rb  reorg.rb  scope.rb  status.rb  up.rb
lib/: cache.rb  colorize.rb  command.rb  command_alias.rb  command_collection.rb  config.rb  config_command.rb  env.rb  makefile_command.rb  makefile_path.rb  omniorg.rb  omnipath.rb  path.rb  path_alias.rb  updater.rb  utils.rb
lib/lookup/: command.rb  repo.rb
lib/up/: apt_operation.rb  asdf_operation.rb  bundler_operation.rb  custom_operation.rb  dnf_operation.rb  go_operation.rb  homebrew_operation.rb  node_operation.rb  operation.rb  pacman_operation.rb  python_operation.rb  ruby_operation.rb  rust_operation.rb
shell_integration/: omni.bash  omni.bash.tmpl  omni.fish  omni.fish.tmpl  omni.zsh  omni.zsh.tmpl
src/: lib.rs  main.rs
src/internal/: cache.rs  dynenv.rs  env.rs  errors.rs  hooks.rs  mod.rs  self_updater.rs  testutils.rs  workdir.rs
src/internal/cache/: asdf_operation.rs  cargo_install.rs  database.rs  github_release.rs  go_install.rs  handler.rs  homebrew_operation.rs  loaders.rs  mise_operation.rs  mod.rs  offsetdatetime_hashmap.rs  omnipath.rs  prompts.rs  repositories.rs  up_environments.rs  utils.rs  workdirs.rs
src/internal/cache/database/: errors.rs  from_row.rs  manager.rs  mod.rs  pool.rs  row_ext.rs  upgrade.rs
src/internal/cache/migration/: convert.rs  mod.rs  pre0015.rs  pre0029.rs  predatabase.rs
src/internal/cache/schemas/: create.sql
src/internal/cache/sql/: asdf_operation_add_installed.sql  asdf_operation_add_required_by.sql  asdf_operation_get_plugin_versions.sql  asdf_operation_should_update_asdf.sql  asdf_operation_updated_asdf.sql  asdf_operation_updated_plugin.sql  create_tables.sql  github_release_operation_add_install.sql  github_release_operation_add_install_required_by.sql  github_release_operation_cleanup.sql  github_release_operation_list_installed.sql  homebrew_operation_add_install.sql  homebrew_operation_add_install_required_by.sql  homebrew_operation_add_tap.sql  homebrew_operation_add_tap_required_by.sql  homebrew_operation_checked_install.sql  homebrew_operation_get_install_bin_paths.sql  homebrew_operation_list_removable_install.sql  homebrew_operation_list_removable_tap.sql  homebrew_operation_remove_install.sql  homebrew_operation_remove_tap.sql  homebrew_operation_set_install_bin_paths.sql  prompts_add_answer.sql  (+15 more)
src/internal/commands/: base.rs  fromconfig.rs  frommakefile.rs  frompath.rs  help_parser.rs  loader.rs  mod.rs  path.rs  utils.rs  void.rs
src/internal/config/: bootstrap.rs  config_value.rs  loader.rs  mod.rs  parser.rs  template.rs  utils.rs
src/internal/git/: loader.rs  mod.rs  org.rs  updater.rs  utils.rs
src/internal/hooks/: init.rs  mod.rs  uuid.rs
src/internal/user_interface/: colors.rs  mod.rs  print.rs
src/internal/utils/: base62.rs  libc.rs  mod.rs
src/omni/: cache.rs  dynenv.rs  env.rs  hooks.rs  mod.rs  self_updater.rs
src/omni/commands/: base.rs  fromconfig.rs  frommakefile.rs  frompath.rs  loader.rs  path.rs  utils.rs
src/omni/config/: config_value.rs  loader.rs  parser.rs
src/omni/git/: loader.rs  org.rs  updater.rs  utils.rs
src/omni/user_interface/: colors.rs  mod.rs
templates/: askpass.sh.tmpl  shell_integration.bash.tmpl  shell_integration.fish.tmpl  shell_integration.zsh.tmpl
tests/: test_config_commands.bats  test_omni_cd.bats  test_omni_config_check.bats  test_omni_help.bats  test_omni_organize.bats  test_omni_status.bats  test_omni_tidy.bats  test_omni_up_custom.bats  test_omni_up_go_install.bats  test_omni_up_homebrew.bats  test_omni_up_python.bats
tests/fixtures/: asdf_operation_cache.json  go-versions.txt  python-versions.txt
tests/fixtures/argparse/: basic.py  basic.txt  complex.py  complex.txt  description-multiline.py  description-multiline.txt  description-oneline.py  description-oneline.txt  epilog-multiline.py  epilog-multiline.txt  epilog-oneline.py  epilog-oneline.txt  exclusive-group.py  exclusive-group.txt  lower-upper-refs.py  lower-upper-refs.txt  many-alt-options.py  many-alt-options.txt  positional-argument-with-option-name.py  positional-argument-with-option-name.txt  positional-argument.py  positional-argument.txt
tests/fixtures/omni/: config-check-broken-input.txt  config-check-many-issues-json.txt  config-check-many-issues.txt  help-cd-json.txt  help-cd.txt  help-clone.txt  help-config-bootstrap-json.txt  help-config-bootstrap.txt  help-config-check-json.txt  help-config-check.txt  help-config-json.txt  help-config-path-switch.txt  help-config-path.txt  help-config-reshim.txt  help-config-trust.txt  help-config-untrust.txt  help-config.txt  help-custom-command.txt  help-down.txt  help-help.txt  help-hook-env.txt  help-hook-init.txt  help-hook-uuid.txt  help-hook.txt  help-json.txt  help-long-config-command-10.txt  help-long-config-command-100.txt  help-long-config-command-1000.txt  help-long-config-command-50.txt  help-scope.txt  help-status.txt  help-tidy.txt  help-unfold-json.txt  help-unfold.txt  help-up-json.txt  help-up.txt  help-wrapped-60.txt  help.txt  status-config-files.txt  status-config.txt  (+4 more)
tests/helpers/: asdf.bash  mise.bash  output.bash  utils.bash
website/: README.md  docusaurus.config.js  package.json  sidebars.js
website/contents/reference/: 04-dynamic-environment.md  dynamic-environment.md
website/contents/tutorials/: 01-why-omni.md  04-ide-integration.md  05-cicd.md  cicd.md  ide-integration.md  why-omni.md
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
(+320 files in other folders)
