[package]
name = "omnicli"
version = "0.0.0-git"
authors = ["Raphaël Beamonte <raphael.beamonte@gmail.com>"]
description = "Omnipotent dev tool"
documentation = "https://omnicli.dev"
edition = "2021"
homepage = "https://omnicli.dev"
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/XaF/omni"
exclude = [
    ".github/*",
    "website/*",
]

[[bin]]
name = "omni"
path = "src/main.rs"

[build-dependencies]
time = { version = "0.3.34", features = ["serde-well-known"] }

[dependencies]
blake3 = "1.5.1"
clap = "4.5.2"
duct = "0.13.6"
flate2 = "1.0.28"
fs4 = "0.8.0"
gethostname = "0.4.3"
git-url-parse = "0.4.4"
git2 = "0.18.2"
glob = "0.3.1"
humantime = "2.1.0"
imara-diff = "0.1.5"
indicatif = "0.17.8"
is-terminal = "0.4.12"
itertools = "0.12.1"
lazy_static = "1.4.0"
libz-sys = { version = "1.1.15", features = ["static"] }
machine-uid = "0.5.1"
node-semver = "2.1.0"
normalize-path = "0.2.1"
num-bigint = "0.4.4"
num-integer = "0.1.46"
num-traits = "0.2.18"
once_cell = "1.19.0"
openssl = { version = "0.10", features = ["vendored"] }
package-json = "0.4.0"
path-clean = "1.0.1"
pathdiff = "0.2.1"
petname = "1.1.3"
regex = "1.10.3"
requestty = "0.5.0"
reqwest = { version = "0.11.26", features = ["blocking"] }
self-replace = "1.3.7"
semver = "1.0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9"
sha2 = "0.10.8"
shell-escape = "0.1.5"
shell-words = "1.1.0"
strsim = "0.11.0"
tar = "0.4.40"
tempfile = "3.10.1"
tera = "1.19.1"
term_cursor = "0.2.1"
term_size = "0.3.2"
time = { version = "0.3.34", features = ["serde-well-known"] }
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
walkdir = "2.4.0"
