[package]
name = "omnicli"
version = "0.0.0-git"
authors = ["Raphaël Beamonte <raphael.beamonte@gmail.com>"]
description = "Omnipotent dev tool"
documentation = "https://omnicli.dev"
edition = "2021"
homepage = "https://omnicli.dev"
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/XaF/omni"
exclude = [
    ".github/*",
    "website/*",
]

[[bin]]
name = "omni"
path = "src/main.rs"

[build-dependencies]
time = { version = "0.3.37", features = ["serde-well-known"] }

[dev-dependencies]
mockito = "1.6.1"
temp-env = "0.3.6"

[dependencies]
blake3 = "1.5.5"
cfg-if = "1.0.0"
clap = { version = "4.5.23", features = ["string"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
duct = "0.13.6"
flate2 = "1.0.35"
fs4 = "0.12.0"
futures = "0.3.31"
gethostname = "0.5.0"
git-url-parse = "0.4.5"
git2 = { version = "0.19.0", features = ["vendored-libgit2"] }
glob = "0.3.1"
globset = "0.4.14"
humantime = "2.1.0"
imara-diff = "0.1.6"
indicatif = "0.17.9"
is-terminal = "0.4.13"
itertools = "0.13.0"
lazy_static = "1.4.0"
libz-sys = { version = "1.1.19", features = ["static"] }  # So we can force static linking
machine-uid = "0.5.2"
md-5 = "0.10.6"
nix = "0.29.0"
node-semver = "2.1.0"
normalize-path = "0.2.1"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.18"
once_cell = "1.20.1"
openssl = { version = "0.10", features = ["vendored"] }  # So it can be bundled with the binary
path-clean = "1.0.1"
pathdiff = "0.2.3"
petname = "2.0.2"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.25.0", features = ["bundled"] }
regex = "1.11.1"
requestty = "0.5.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
self-replace = "1.5.0"
semver = "1.0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
sha1 = "0.10.6"
sha2 = "0.10.8"
shell-escape = "0.1.5"
shell-words = "1.1.0"
strsim = "0.11.1"
tar = "0.4.42"
tempfile = "3.14.0"
tera = "1.20.0"
term_cursor = "0.2.1"
term_size = "0.3.2"
thiserror = "2.0.6"
time = { version = "0.3.37", features = ["macros", "serde-well-known"] }
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.3"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
walkdir = "2.4.0"
which = "7.0.0"
whoami = "1.5.2"
zip-extract = "0.2.1"

[package.metadata.cargo-machete]
ignored = ["libz-sys", "openssl"]

[package.metadata.binstall]
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-x86_64-darwin.tar.gz"
checksum-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-x86_64-darwin.sha256"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-arm64-darwin.tar.gz"
checksum-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-arm64-darwin.sha256"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-x86_64-linux.tar.gz"
checksum-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-x86_64-linux.sha256"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-arm64-linux.tar.gz"
checksum-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-arm64-linux.sha256"
